bg on mobile fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,7 @@ html, body {
         height: 100vh;
         content: '';
         background-image: url(../images/bg-dark.jpg);;
-
+        background-size: cover;
       }
 
     }
